src/styles/global.scss
// HTML
//----------------------------------------------------------------------
html {
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;
}

// BODY
//----------------------------------------------------------------------
body {
  background-color:#f9f9f9;
}

// DEFAULTS
//----------------------------------------------------------------------
html,
body,
header,
nav,
h1,
h2,
p {
  margin: 0;
  padding: 0;
}

// HEADER & NAV
//----------------------------------------------------------------------

header {
  position: fixed;
  z-index: 1;
  width: 100%;
  background-color: #100e17;
  nav {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    #nav-title {
      grid-column: 1;
    }
    #nav-blog {
      grid-column: 5;
    }
    #nav-me {
      grid-column: 6;
    }
    a {
      height: 8vh;
      display: flex;
      align-items: center;
      justify-content: center;
      color: white;
    }
    a:hover {
      background-color:#f9f9f9;
      color: black;
    }
  }
}

// MAIN
//----------------------------------------------------------------------
main {
  box-sizing: border-box;
  min-height: 70vh;
  width: 60vw;
  margin: 0 auto;
  background-color:#f9f9f9;
  padding: 8vh 0 15vh 0;
}

a {
  text-decoration: none;
  color: black;
}

// Hero Banner & Emojis
//----------------------------------------------------------------------

.heroBanner {
  display: flex;
  height: 30vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  a {
    color: #100e17;
  }
  h1 {
    font-size: 2.5rem;
  }
  h2 {
    margin-top: 2.5vh;
    font-weight: normal;
    text-align: justify;
    a {
      color: blue;
    }
  }
}

// Icons & Links
//----------------------------------------------------------------------

.contact-links {
  padding-left: 5vw;

  ul {
    margin: 0;
  }
}

.contact-link:hover {
  color: blue;
}

.tech-skill-link {
  line-height: 4vh;
}

// PostLinks and Tags
//----------------------------------------------------------------------

.latestPosts {
  margin-top: 2vh;
  h2 {
    font-size: 2rem;
  }
}

.blogIntro {
  padding-top: 4vh;
  font-weight: normal;
  margin-bottom: 5vh;
}

.aboutMe {
  margin-top: 8vh;
}

.postLinks {
  padding: 3vh 0 0 0;
  display: flex;
  flex-direction: column;
  align-content: center;
}

.postTags {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  grid-gap: 0.2rem;
  margin: 1rem 0 1rem 0;
}

.postLink {
  padding: 2vh 0 2vh 0;
  border-bottom: 1px solid #100e17;
  h3 {
    margin: 0;
    padding-bottom: 5px;
  }
}

.postLink:hover {
  background: rgb(242, 242, 242);
}

.postLinkDate {
  margin-top: 1vh;
}

.blog-post-social {
  display: flex;
}

.blog-post-social > div {
  margin: 5px;
}

// ARTICLE
//----------------------------------------------------------------------
article {
  background-color:#f9f9f9;
  width: 60vw;
  line-height: 2rem;
  font-size: 1.2rem;
  p,
  h1,
  table,
  ul {
    padding: 2.5vh 0 0 0;
  }
  a {
    color: blue;
  }
  h2 {
    padding: 5vh 0 0 0;
    border-bottom: 1px solid #100e17;
  }
}

.postShowPageTitle {
  margin-top: 5vh;
  text-align: center;
}

.postShowPageImage {
  margin: 5vh 5vw 5vh 5vw;
  border-radius: 10px;
  box-shadow: 0 0 5px;
}

// FOOTER
//----------------------------------------------------------------------
footer {
  height: 20vh;
  border-top: 1px solid #100e17;
  width: 60vw;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  align-items: center;
  justify-items: center;
  grid-template-areas:
    "copyright source gatsby netlify";
  a {
    color: rgb(100, 58, 184);
  }
  .icon-link {
    margin: 0;
    padding: 0;
    width: 48px;
    height: 48px;
    text-align: center;
  }
}

// BUTTONS
//----------------------------------------------------------------------
button {
  background-color: lighten(#100e17, 60%);
  padding: 10px;
  font-size: 1rem;
  color: #f9f9f9;
  font-weight: bold;
  box-shadow: none;
  outline: none;
  border-radius: 10px;
  a {
    color: #f9f9f9;
  }
}

button:hover {
  background-color: #f9f9f9;
  color: #100e17;
  box-shadow: none;
  outline: none;
}

.social-buttons {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;

  div:first-of-type {
    margin-right: 0.5rem;
  }
}

// PROJECT
//----------------------------------------------------------------------
.projectHeader {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 10vh;
  padding: 10px;
  background-color: #100e17;
  color: white;
  border-radius: 10px;

  h1,
  h2 {
    padding: 10px;
  }

  a {
    color: white;
    text-decoration: underline;
  }
}

.projectsContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10vh;

  .projectCard {
    border: solid black 1px;
    border-radius: 10px;
    height: 50vh;
    display: grid;
    border-top: 1px solid black;
    grid-template-columns: 1fr;

    img {
      height: 38vh;
      border-top-left-radius: 10px;
      border-top-right-radius: 10px;
    }

    .projectCaption {
      display: flex;
      height: 12vh;
      flex-direction: column;
      align-items: center;
      width: 100%;
      border-top: 2px solid black;
      h3,
      p {
        margin: 5px 0 0 0;
        padding: 0 5px 0 5px;
        text-align: center;
      }

      h3 {
        color: #100e17;
        padding-top: 5px;
      }
    }
  }
}

// GATSBY HIGHLIGHT
//----------------------------------------------------------------------

/**
 * Add back the container background-color, border-radius, padding, margin
 * and overflow that we removed from <pre>.
 */
.gatsby-highlight {
  background-color: #2d2d2d;
  border-radius: 0.3em;
  margin: 0.5em 0;
  padding: 1em;
  overflow: auto;
}

/**
 * Remove the default PrismJS theme background-color, border-radius, margin,
 * padding and overflow.
 * 1. Make the element just wide enough to fit its content.
 * 2. Always fill the visible space in .gatsby-highlight.
 * 3. Adjust the position of the line numbers
 */
.gatsby-highlight pre[class*="language-"] {
  background-color: transparent;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  overflow: initial;
  float: left; /* 1 */
  min-width: 100%; /* 2 */
}

// MEDIA QUERIES
//----------------------------------------------------------------------

@media (max-width: 768px) {
  .project {
    height: 50vh;
  }
  .projectsContainer {
    grid-template-columns: 1fr;
  }
  .heroBanner h1 {
    padding: 0;
  }
  main,
  article {
    width: 90vw;
  }
}

@media (max-width: 480px) {
  header {
    bottom: 0px;
    background-color: #100e17;
    nav {
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      #nav-title {
        display: 1;
      }
      #nav-blog {
        grid-column: 3;
      }
      #nav-me {
        grid-column: 4;
      }
      h2 {
        font-size: 1.3rem;
      }
    }
  }
  main {
    padding: 2.5vh 5vw 0 5vw;
    margin: 0;
    min-height: 50vh;
    width: 100vw;
    margin-bottom: 10vh;
  }
  .latestPosts,
  .heroCaption,
  .postTags {
    padding: 0;
  }
  .postLink {
    margin: 0;
  }
  .heroBanner {
    padding: 0;
  }
  article {
    margin: 0;
    width: 90vw;
  }
  .heroBanner {
    height: 50vh;
  }
  .postShowPageTitle {
    margin-top: 0;
  }
  .postShowPageImage {
    border-radius: 0;
    margin: 2vh 0 0 0;
    box-shadow: none;
  }
  .postLinks {
    padding: 0;
  }
  h1 {
    padding: 0;
  }
  .projectHeader {
    margin-bottom: 5vh;
    h2 {
      width: 100%;
    }
  }
  .projectsContainer {
    grid-gap: 5vh;
  }
  footer {
    margin-bottom: 10vh;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    align-items: center;
    justify-items: center;
    grid-template-areas:
      "copyright"
      "source"
      "built"
      "hosted";
  }
}

